--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,12 @@ a {
     @media (min-width: 1440px) {
       .content__warp {
         padding: 0 110px; } }
+  @media (min-width: 321px) {
+    .content--indent {
+      padding-top: 25px; } }
+  @media (min-width: 1440px) {
+    .content--indent {
+      padding-top: 55px; } }
 
 .maket {
   position: relative; }
@@ -57,7 +63,6 @@ a {
     pointer-events: none;
     display: none; }
     .maket__pos--mobile {
-      top: 13px;
       display: block; }
       @media (min-width: 321px) {
         .maket__pos--mobile {
@@ -121,41 +126,49 @@ h1 {
     .h4, h4 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
-.h5, .nav__item, .top-nav__item, .btn, h5 {
+.h5, .top-nav__item, .btn, h5 {
   font: normal 14px/21px "Oswald", sans-serif; }
   @media (min-width: 321px) {
-    .h5, .nav__item, .top-nav__item, .btn, h5 {
+    .h5, .top-nav__item, .btn, h5 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
-.header__warp {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
-  @media (min-width: 321px) {
-    .header__warp {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-              flex-direction: row;
-      -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between; } }
-
-.header__main-sect--indent {
-  padding-bottom: 20px; }
-  @media (min-width: 321px) {
-    .header__main-sect--indent {
-      padding: 30px 0 0 80px; } }
+.header {
+  height: 696px; }
+  .header__warp {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    @media (min-width: 321px) {
+      .header__warp {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between; } }
+    @media (min-width: 1440px) {
+      .header__warp--indent {
+        margin-bottom: 50px; } }
+  .header__main-sect--indent {
+    padding-bottom: 20px; }
+    @media (min-width: 321px) {
+      .header__main-sect--indent {
+        padding: 30px 0 0 80px; } }
+    @media (min-width: 1440px) {
+      .header__main-sect--indent {
+        padding-bottom: 30px;
+        padding-left: 65px; } }
   @media (min-width: 1440px) {
-    .header__main-sect--indent {
-      padding-bottom: 30px; } }
+    .header--indent {
+      margin-bottom: 25px; } }
 
 .logo {
   position: relative;
@@ -171,17 +184,12 @@ h1 {
       -webkit-box-pack: normal;
           -ms-flex-pack: normal;
               justify-content: normal; } }
-  @media (min-width: 1440px) {
-    .logo {
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center; } }
   .logo__mobile {
     position: absolute;
     top: 50%;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
-    left: 25px; }
+    left: -10px; }
     @media (min-width: 321px) {
       .logo__mobile {
         display: none; } }
@@ -222,7 +230,10 @@ h1 {
     white-space: nowrap;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     display: block;
-    margin: 25px 0; }
+    padding: 18px 0;
+    /*    &:first-child {
+      margin-top: 0;
+    }*/ }
     @media (min-width: 321px) {
       .nav__item {
         margin: 0 18px;
@@ -244,8 +255,6 @@ h1 {
           border-bottom: 2px solid #ffffff; }
         .nav__item:active {
           color: rgba(255, 255, 255, 0.3); } }
-    .nav__item:first-child {
-      margin-top: 0; }
 
 .top-nav__links {
   text-align: center; }
@@ -295,13 +304,16 @@ h1 {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative; }
+  @media (min-width: 321px) {
+    .main-sect__block {
+      padding-left: 15px; } }
 
 .main-sect__label {
   text-align: center;
   color: #ffffff;
   background: url("/img/index-background-mobile.png") no-repeat;
   margin: 0 -20px;
-  padding: 20px;
+  padding: 26px 20px;
   height: 310px; }
   @media (min-width: 321px) {
     .main-sect__label {
@@ -412,32 +424,39 @@ h1 {
   background-color: #68b738;
   -ms-flex-negative: 0;
       flex-shrink: 0; }
-  .choose__icon--small {
+  .choose__icon--mobile {
     width: 50px;
     height: 50px; }
-    .choose__icon--small .svg {
+    .choose__icon--mobile .svg {
       width: 50px;
       height: 50px; }
   @media (min-width: 321px) {
-    .choose__icon--invis-tab {
+    .choose__icon--invis-on-tab {
       display: none; } }
   @media (min-width: 1440px) {
-    .choose__icon--invis-tab {
+    .choose__icon--invis-on-tab {
       display: block; } }
-  .choose__icon--big {
+  .choose__icon--tablet {
     width: 200px;
     height: 200px; }
-    .choose__icon--big .svg {
+    .choose__icon--tablet .svg {
       width: 200px;
       height: 200px; }
-  .choose__icon--vis-in-tab {
+  .choose__icon--vis-on-tab {
     display: none; }
     @media (min-width: 321px) {
-      .choose__icon--vis-in-tab {
+      .choose__icon--vis-on-tab {
         display: block; } }
     @media (min-width: 1440px) {
-      .choose__icon--vis-in-tab {
+      .choose__icon--vis-on-tab {
         display: none; } }
+  @media (min-width: 1440px) {
+    .choose__icon--desktop {
+      width: 100px;
+      height: 100px; }
+      .choose__icon--desktop .svg {
+        width: 100px;
+        height: 100px; } }
 
 .choose__label {
   text-transform: uppercase; }
@@ -473,8 +492,17 @@ h1 {
     width: 48px;
     height: 24px; }
 
-.how__title--ident {
+.how__block--indent {
+  margin-bottom: 42px; }
+  @media (min-width: 321px) {
+    .how__block--indent {
+      margin-bottom: 0; } }
+
+.how__title--indent {
   padding-bottom: 40px; }
+  @media (min-width: 321px) {
+    .how__title--indent {
+      padding-bottom: 75px; } }
 
 @media (min-width: 321px) {
   .how__items {
@@ -491,21 +519,25 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative; }
+  position: relative;
+  border: 1px solid #000; }
   @media (min-width: 321px) {
     .how__item {
       display: block;
-      width: 50%; } }
+      width: 50%;
+      height: 280px; } }
   @media (min-width: 1440px) {
     .how__item {
-      width: 25%; } }
-  .how__item--ident {
+      width: 25%;
+      height: 250px; } }
+  .how__item--indent {
     margin-bottom: 20px; }
     @media (min-width: 321px) {
-      .how__item--ident {
-        padding-right: 125px; } }
+      .how__item--indent {
+        padding-right: 125px;
+        margin-bottom: 36px; } }
     @media (min-width: 1440px) {
-      .how__item--ident {
+      .how__item--indent {
         padding-right: 50px; } }
 
 .how__trafaret {
@@ -516,7 +548,11 @@ h1 {
       flex-shrink: 0;
   position: relative; }
   @media (min-width: 321px) {
-    .how__trafaret--ident {
+    .how__trafaret {
+      width: 80px;
+      height: 80px; } }
+  @media (min-width: 321px) {
+    .how__trafaret--indent {
       margin-bottom: 30px; } }
 
 .how__icon {
@@ -542,18 +578,15 @@ h1 {
 .how__text {
   position: relative;
   z-index: 1; }
-  .how__text--ident {
+  .how__text--indent {
     padding-left: 15px; }
     @media (min-width: 321px) {
-      .how__text--ident {
+      .how__text--indent {
         padding-left: 0;
         padding-bottom: 45px; } }
 
 .how__count {
-  display: none;
-  /*@media(min-width: $desktop) {
-      margin-right: 15px;
-    }*/ }
+  display: none; }
   @media (min-width: 321px) {
     .how__count {
       display: block;
@@ -564,9 +597,13 @@ h1 {
       left: 0;
       pointer-events: none;
       color: #f2f2f2;
-      font: normal 180px/1 "Oswald", sans-serif;
+      font: normal 230px/1 "Oswald", sans-serif;
       text-align: center;
       z-index: 0; } }
+
+@media (min-width: 321px) {
+  .how--temp-margin {
+    margin-bottom: 135px; } }
 
 @media (min-width: 1440px) {
   .example__block {
@@ -581,50 +618,208 @@ h1 {
   .example__content {
     width: 40%; } }
 
-.example__title--ident {
+.example__title--indent {
   padding-bottom: 35px; }
   @media (min-width: 321px) {
-    .example__title--ident {
-      padding-bottom: 55px; } }
+    .example__title--indent {
+      padding-bottom: 60px; } }
   @media (min-width: 1440px) {
-    .example__title--ident {
+    .example__title--indent {
       padding-bottom: 140px; } }
 
-.example__text--ident {
+.example__text--indent {
   padding-bottom: 25px; }
   @media (min-width: 321px) {
-    .example__text--ident {
+    .example__text--indent {
       padding-bottom: 55px; } }
   @media (min-width: 1440px) {
-    .example__text--ident {
+    .example__text--indent {
       padding-bottom: 70px; } }
 
+@media (min-width: 321px) {
+  .example__collapse {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 90px; } }
+
+.example__tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  @media (min-width: 321px) {
+    .example__tabs {
+      -webkit-box-pack: normal;
+          -ms-flex-pack: normal;
+              justify-content: normal; } }
+  .example__tabs--indent {
+    margin-bottom: 40px; }
+    @media (min-width: 321px) {
+      .example__tabs--indent {
+        margin-bottom: 0; } }
+
+.example__tab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 125px;
+  height: 56px;
+  border: 1px solid rgba(102, 102, 102, 0.5);
+  border-radius: 3px;
+  text-transform: uppercase;
+  position: relative; }
+  @media (min-width: 321px) {
+    .example__tab {
+      width: 165px;
+      height: 70px; }
+      .example__tab:first-child {
+        margin-right: 40px; } }
+
+.example__dop-text {
+  text-align: center;
+  position: absolute;
+  padding: 0 15px;
+  top: 100%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  text-transform: none;
+  background-color: #f2f2f2;
+  white-space: nowrap;
+  font: normal 12px/1 "Oswald", sans-serif; }
+  @media (min-width: 321px) {
+    .example__dop-text {
+      background-color: #ffffff;
+      font: normal 14px/1 "Oswald", sans-serif;
+      padding: 0 10px; } }
+
 .example__payed {
+  text-align: center;
   text-transform: uppercase; }
-  .example__payed--ident {
-    padding-bottom: 40px; }
+  .example__payed--indent {
+    padding-bottom: 35px; }
+    @media (min-width: 321px) {
+      .example__payed--indent {
+        padding-bottom: 0; } }
+
+@media (min-width: 321px) {
+  .example__warp--indent {
+    padding-bottom: 65px; } }
 
 .example__pic {
   pointer-events: none;
   position: relative; }
+  .example__pic--indent {
+    margin-bottom: 40px; }
+
+.example__dop-block--indent {
+  margin-bottom: 0; }
+  @media (min-width: 321px) {
+    .example__dop-block--indent {
+      margin-bottom: 0; } }
 
 .example__slider {
-  position: absolute;
-  right: 30%;
-  left: 30%;
-  height: 6px;
-  background-color: #dcdcdc;
-  border-radius: 3px; }
-
-.example--ident {
-  padding-bottom: 20px; }
+  margin: 0 15px;
+  position: relative;
+  width: 84px;
+  height: 14px;
+  border: 1px solid rgba(102, 102, 102, 0.5);
+  border-radius: 5px;
+  background-color: #ffffff; }
   @media (min-width: 321px) {
-    .example--ident {
-      padding-bottom: 50px;
-      padding-left: 90px; } }
+    .example__slider {
+      width: 428px;
+      height: 6px;
+      border: none;
+      background-color: #dcdcdc;
+      pointer-events: none; } }
+  .example__slider:after {
+    content: '';
+    position: absolute;
+    top: 25%;
+    right: 50%;
+    bottom: 25%;
+    left: 5%;
+    border-radius: 3px;
+    background-color: #68b738;
+    -webkit-transition: -webkit-transform 0.2s easy;
+    transition: -webkit-transform 0.2s easy;
+    transition: transform 0.2s easy;
+    transition: transform 0.2s easy, -webkit-transform 0.2s easy;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    pointer-events: auto; }
+    @media (min-width: 321px) {
+      .example__slider:after {
+        cursor: pointer;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        border-radius: 50%;
+        border: 1px solid #dcdcdc;
+        background-color: #ffffff;
+        -webkit-box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.15);
+                box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.15);
+        width: 35px;
+        height: 35px;
+        -webkit-transition: border 0.2s ease, -webkit-box-shadow 0.2s ease;
+        transition: border 0.2s ease, -webkit-box-shadow 0.2s ease;
+        transition: box-shadow 0.2s ease, border 0.2s ease;
+        transition: box-shadow 0.2s ease, border 0.2s ease, -webkit-box-shadow 0.2s ease; } }
+  .example__slider:hover:after {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(50, 50, 50, 0.25);
+            box-shadow: 0 2px 5px 0 rgba(50, 50, 50, 0.25); }
+  .example__slider:active:after {
+    border: 2px solid #68b738;
+    -webkit-box-shadow: 0 3px 5px 0 rgba(50, 50, 50, 0.35);
+            box-shadow: 0 3px 5px 0 rgba(50, 50, 50, 0.35); }
+  .example__slider:before {
+    pointer-events: none; }
+    @media (min-width: 321px) {
+      .example__slider:before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        border-radius: 50%;
+        background-color: #68b738;
+        width: 8px;
+        height: 8px;
+        z-index: 1; } }
+
+.example--indent {
+  padding: 20px 20px 30px 20px;
+  margin-bottom: 30px; }
   @media (min-width: 1440px) {
-    .example--ident {
+    .example--indent {
       padding-bottom: 30px; } }
+
+.example--push {
+  margin-right: -20px;
+  margin-left: -20px; }
+
+.example--bg-grey {
+  background-color: #f2f2f2; }
+  @media (min-width: 321px) {
+    .example--bg-grey {
+      background: none; } }
 
 .map {
   height: 400px; }
@@ -632,10 +827,12 @@ h1 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
+    .map__block--indent {
+      margin-bottom: 25px; }
   .map__title {
     width: 50%;
     text-transform: uppercase;
-    font-weight: bold; }
+    font: normal 16px/20px "Oswald", sans-serif; }
   .map__address {
     width: 50%; }
   .map__inner {
@@ -682,6 +879,98 @@ h1 {
       height: 25px; }
     .social .icon:not(:last-child) {
       margin-right: 6px; }
+
+.switcher {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-transform: uppercase; }
+  .switcher__slider {
+    margin: 0 15px;
+    position: relative;
+    width: 84px;
+    height: 14px;
+    border: 1px solid rgba(102, 102, 102, 0.5);
+    border-radius: 5px;
+    background-color: #ffffff; }
+    @media (min-width: 321px) {
+      .switcher__slider {
+        width: 428px;
+        height: 6px;
+        border: none;
+        background-color: #dcdcdc;
+        pointer-events: none; } }
+    .switcher__slider:after {
+      content: '';
+      position: absolute;
+      top: 25%;
+      right: 50%;
+      bottom: 25%;
+      left: 5%;
+      border-radius: 3px;
+      background-color: #68b738;
+      -webkit-transition: -webkit-transform 0.2s easy;
+      transition: -webkit-transform 0.2s easy;
+      transition: transform 0.2s easy;
+      transition: transform 0.2s easy, -webkit-transform 0.2s easy;
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      pointer-events: auto; }
+      @media (min-width: 321px) {
+        .switcher__slider:after {
+          cursor: pointer;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%);
+          border-radius: 50%;
+          border: 1px solid #dcdcdc;
+          background-color: #ffffff;
+          -webkit-box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.15);
+                  box-shadow: 0 1px 5px 0 rgba(50, 50, 50, 0.15);
+          width: 35px;
+          height: 35px;
+          -webkit-transition: border 0.2s ease, -webkit-box-shadow 0.2s ease;
+          transition: border 0.2s ease, -webkit-box-shadow 0.2s ease;
+          transition: box-shadow 0.2s ease, border 0.2s ease;
+          transition: box-shadow 0.2s ease, border 0.2s ease, -webkit-box-shadow 0.2s ease; } }
+    .switcher__slider:hover:after {
+      -webkit-box-shadow: 0 2px 5px 0 rgba(50, 50, 50, 0.25);
+              box-shadow: 0 2px 5px 0 rgba(50, 50, 50, 0.25); }
+    .switcher__slider:active:after {
+      border: 2px solid #68b738;
+      -webkit-box-shadow: 0 3px 5px 0 rgba(50, 50, 50, 0.35);
+              box-shadow: 0 3px 5px 0 rgba(50, 50, 50, 0.35); }
+    .switcher__slider:before {
+      pointer-events: none; }
+      @media (min-width: 321px) {
+        .switcher__slider:before {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%);
+          border-radius: 50%;
+          background-color: #68b738;
+          width: 8px;
+          height: 8px;
+          z-index: 1; } }
+  .switcher__text {
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.23);
+    -webkit-transition: border 0.2s ease;
+    transition: border 0.2s ease; }
+    .switcher__text:hover {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.4); }
+    .switcher__text:active {
+      border-bottom: 1px solid transparent; }
 
 .footer__block {
   display: -webkit-box;
