--- a/sass/site/choose.scss
+++ b/sass/site/choose.scss
@@ -51,7 +51,8 @@
     border-radius: 50%;
     background-color: $primary;
     flex-shrink: 0;
-    &--small {
+
+    &--mobile {
       width: 50px;
       height: 50px;
       .svg {
@@ -59,7 +60,8 @@
         height: 50px;
       }
     }
-    &--invis-tab {
+
+    &--invis-on-tab {
       @media (min-width: $mobile) {
         display: none;
       }
@@ -67,7 +69,8 @@
         display: block;
       }
     }
-    &--big {
+
+    &--tablet {
       width: 200px;
       height: 200px;
       .svg {
@@ -75,7 +78,8 @@
         height: 200px;
       }
     }
-    &--vis-in-tab {
+
+    &--vis-on-tab {
       display: none;
       @media (min-width: $mobile) {
         display: block;
@@ -84,7 +88,18 @@
         display: none;
       }
     }
+    &--desktop {
+      @media (min-width: $desktop) {
+        width: 100px;
+        height: 100px;
+        .svg {
+          width: 100px;
+          height: 100px;
+        }
+      }
+    }
   }
+
   &__label {
     text-transform: uppercase;
     &--indent {
