--- a/sass/site/header.scss
+++ b/sass/site/header.scss
@@ -1,4 +1,5 @@
 .header {
+  height: 696px;
   &__warp {
     display: flex;
     flex-direction: column;
@@ -9,18 +10,36 @@
     }
     @media (min-width: $desktop) {
     }
+    &--indent {
+      @media (min-width: $mobile) {
+      }
+      @media (min-width: $desktop) {
+        margin-bottom: 50px;
+      }
+    }
+  }
+  &__nav {
+    @media (min-width: $desktop) {
+      //background: url('/img/index-background-desktop.png') no-repeat right;
+    }
   }
   &__main-sect {
     &--indent {
       padding-bottom: 20px;
       @media (min-width: $mobile) {
         padding: 30px 0 0 80px;
-        //padding-bottom: 50px;
-        //padding-left: 90px;
       }
       @media (min-width: $desktop) {
         padding-bottom: 30px;
+        padding-left: 65px;
       }
+    }
+  }
+  &--indent {
+    @media (min-width: $mobile) {
+    }
+    @media (min-width: $desktop) {
+      margin-bottom: 25px;
     }
   }
 }
