--- a/sass/site/main-sect.scss
+++ b/sass/site/main-sect.scss
@@ -1,10 +1,10 @@
-
 .main-sect {
   &__block {
     display: flex;
     flex-direction: column;
     position: relative;
     @media (min-width: $mobile) {
+      padding-left: 15px;
     }
     @media (min-width: $desktop) {
     }
@@ -14,7 +14,7 @@
     color: $white;
     background: url('/img/index-background-mobile.png') no-repeat;
     margin: 0 -20px;
-    padding: 20px;
+    padding: 26px 20px;
     height: 310px;
     @media (min-width: $mobile) {
       background: none;
@@ -25,11 +25,10 @@
     }
     @media (min-width: $desktop) {
     }
-
   }
   &__title {
-
     &--indent {
+      //padding-top: 6px;
       padding-bottom: 20px;
       @media (min-width: $mobile) {
         padding-bottom: 40px;
