--- a/sass/site/maket.scss
+++ b/sass/site/maket.scss
@@ -9,7 +9,7 @@
     pointer-events: none;
     display: none;
     &--mobile {
-      top: 13px;
+      //top: 13px;
       @if $maket-visible == 1 {
         display: block;
         @media (min-width: $mobile) {
