--- a/sass/site/nav.scss
+++ b/sass/site/nav.scss
@@ -12,9 +12,8 @@
     text-transform: uppercase;
     white-space: nowrap;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    @extend .h5;
     display: block;
-    margin: 25px 0;
+    padding: 18px 0;
     @media (min-width: $mobile) {
       margin: 0 18px;
       padding: 5px 0;
@@ -41,8 +40,8 @@
         color: rgba($white,.3);
       }
     }
-    &:first-child {
+/*    &:first-child {
       margin-top: 0;
-    }
+    }*/
   }
 }
