--- a/sass/site/content.scss
+++ b/sass/site/content.scss
@@ -13,10 +13,12 @@
   &--indent {
     //padding-top: 10px;
     @media (min-width: $mobile) {
-      padding-top: 25px;
+      //padding-top: 25px;
+      padding-top: 0;
     }
     @media (min-width: $desktop) {
-      padding-top: 55px;
+      //padding-top: 55px;
+      padding-top: 0;
     }
   }
 }
