--- a/sass/site/main-sect.scss
+++ b/sass/site/main-sect.scss
@@ -7,6 +7,7 @@
       padding-left: 15px;
     }
     @media (min-width: $desktop) {
+      position: relative;
     }
   }
   &__label {
@@ -68,7 +69,11 @@
     &--desktop {
       display: none;
       @media (min-width: $desktop) {
-        //display: block;          ///////////////////////////////////////////////////////////////////////////
+        display: block;          ///////////////////////////////////////////////////////////////////////////
+        position: absolute;
+        top: -20%;
+        left: 50%;
+        transform: translateX(-30%);
       }
     }
   }
