--- a/sass/site/nav.scss
+++ b/sass/site/nav.scss
@@ -4,7 +4,7 @@
     display: flex;
   }
   @media (min-width: $desktop) {
-    background-color: $primary;
+    //background-color: $primary;
   }
   &__item {
     color: $black;
