--- a/css/main.css
+++ b/css/main.css
@@ -62,20 +62,6 @@ a {
     z-index: 11;
     pointer-events: none;
     display: none; }
-    .maket__pos--mobile {
-      display: block; }
-      @media (min-width: 321px) {
-        .maket__pos--mobile {
-          display: none; } }
-    @media (min-width: 321px) {
-      .maket__pos--tablet {
-        display: block; } }
-    @media (min-width: 1440px) {
-      .maket__pos--tablet {
-        display: none; } }
-    @media (min-width: 1440px) {
-      .maket__pos--desktop {
-        display: block; } }
 
 .breakpoint {
   position: fixed;
@@ -155,8 +141,8 @@ h1 {
             -ms-flex-pack: justify;
                 justify-content: space-between; } }
     @media (min-width: 1440px) {
-      .header__warp--indent {
-        margin-bottom: 50px; } }
+      .header__warp {
+        position: absolute; } }
   .header__main-sect--indent {
     padding-bottom: 20px; }
     @media (min-width: 321px) {
@@ -299,6 +285,14 @@ h1 {
   .top-nav__item:first-child {
     margin-top: 0; }
 
+@media (min-width: 1440px) {
+  .main-sect {
+    position: relative;
+    width: 50%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1; } }
+
 .main-sect__block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -313,7 +307,11 @@ h1 {
       padding-left: 15px; } }
   @media (min-width: 1440px) {
     .main-sect__block {
-      position: relative; } }
+      position: relative;
+      width: 50%;
+      -webkit-box-flex: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1; } }
 
 .main-sect__label {
   text-align: center;
@@ -986,6 +984,16 @@ h1 {
       border-bottom: 1px solid rgba(0, 0, 0, 0.4); }
     .switcher__text:active {
       border-bottom: 1px solid transparent; }
+
+.zel-content {
+  margin: 0 auto; }
+
+.zel-height {
+  height: 300px;
+  background-color: #eee; }
+
+.dn {
+  display: none; }
 
 .footer__block {
   display: -webkit-box;
