--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,10 @@ a {
   @media (min-width: 768px) {
     .push, .header__warp, .header__block {
       padding: 0 30px; } }
-  @media (min-width: 1440px) {
+  @media (min-width: 1200px) {
     .push, .header__warp, .header__block {
       padding: 0 110px;
-      max-width: 1440px;
+      max-width: 1200px;
       margin: 0 auto; } }
 
 .btn {
@@ -57,7 +57,7 @@ h1 {
   @media (min-width: 768px) {
     .h4, h4 {
       font: normal 18px/27px "Oswald", sans-serif; } }
-  @media (min-width: 1440px) {
+  @media (min-width: 1200px) {
     .h4, h4 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
@@ -68,7 +68,8 @@ h1 {
       font: normal 20px/30px "Oswald", sans-serif; } }
 
 .header__warp {
-  position: relative; }
+  position: relative;
+  z-index: 1; }
   @media (min-width: 768px) {
     .header__warp {
       display: -webkit-box;
@@ -80,11 +81,17 @@ h1 {
       -webkit-box-pack: justify;
           -ms-flex-pack: justify;
               justify-content: space-between; } }
+  @media (min-width: 1200px) {
+    .header__warp {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0; } }
 
 .header__logo {
   position: absolute; }
 
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   .header__block {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -94,18 +101,14 @@ h1 {
   margin: 0 -20px;
   padding: 0 20px; }
 
-@media (min-width: 1440px) {
+@media (min-width: 1200px) {
   .header__main-sect {
     width: 50%; } }
 
-@media (min-width: 1440px) {
-  .header__cat {
-    width: 50%;
-    height: 696px;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    background: url("/img/index-background-desktop.png") no-repeat; } }
+.header__cat {
+  position: relative;
+  width: 50%;
+  height: 300px; }
 
 .logo {
   position: relative;
@@ -134,7 +137,7 @@ h1 {
     @media (min-width: 768px) {
       .logo__tablet {
         display: inline-block; } }
-    @media (min-width: 1440px) {
+    @media (min-width: 1200px) {
       .logo__tablet {
         display: none; } }
   .logo__desktop {
@@ -142,7 +145,7 @@ h1 {
     @media (min-width: 768px) {
       .logo__desktop {
         display: none; } }
-    @media (min-width: 1440px) {
+    @media (min-width: 1200px) {
       .logo__desktop {
         display: block; } }
 
@@ -166,9 +169,21 @@ h1 {
       .nav__item {
         padding: 0 20px; } }
 
-@media (min-width: 768px) {
-  .main-sect__block--indent {
-    padding-left: 90px; } }
+.main-sect__block {
+  z-index: 1; }
+  @media (min-width: 768px) {
+    .main-sect__block--indent {
+      padding-left: 90px; } }
+  @media (min-width: 1200px) {
+    .main-sect__block:after {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: 0;
+      left: 50%;
+      bottom: 0;
+      z-index: 0;
+      background: #63a73a url("/img/index-background-desktop.png") no-repeat; } }
 
 .main-sect__label {
   text-align: center;
@@ -186,6 +201,7 @@ h1 {
               flex-direction: column; } }
   .main-sect__label--bg-cat {
     height: 305px;
+    position: relative;
     background: #63a73a url("/img/index-background-mobile.png") no-repeat center; }
     @media (min-width: 768px) {
       .main-sect__label--bg-cat {
@@ -199,7 +215,7 @@ h1 {
     @media (min-width: 768px) {
       .main-sect__label--indent {
         padding-top: 70px; } }
-    @media (min-width: 1440px) {
+    @media (min-width: 1200px) {
       .main-sect__label--indent {
         padding-top: 115px; } }
 
@@ -208,7 +224,7 @@ h1 {
   @media (min-width: 768px) {
     .main-sect__title--indent {
       padding-bottom: 30px; } }
-  @media (min-width: 1440px) {
+  @media (min-width: 1200px) {
     .main-sect__title--indent {
       padding-bottom: 35px; } }
 
@@ -216,7 +232,7 @@ h1 {
   text-transform: uppercase; }
   .main-sect__description--indent {
     padding-bottom: 40px; }
-    @media (min-width: 1440px) {
+    @media (min-width: 1200px) {
       .main-sect__description--indent {
         padding-bottom: 50px; } }
 
@@ -233,19 +249,20 @@ h1 {
       -webkit-box-ordinal-group: 2;
           -ms-flex-order: 1;
               order: 1; } }
-  @media (min-width: 1440px) {
+  @media (min-width: 1200px) {
     .main-sect__picture--tablet {
       display: none; } }
 
 .main-sect__picture--desktop {
   display: none; }
-  @media (min-width: 1440px) {
+  @media (min-width: 1200px) {
     .main-sect__picture--desktop {
       display: block;
       position: absolute;
+      z-index: 1;
       left: 50%;
-      -webkit-transform: translateX(-30%);
-              transform: translateX(-30%); } }
+      -webkit-transform: translateX(17%);
+              transform: translateX(17%); } }
 
 .main-sect__btn {
   text-transform: uppercase;
