adjskfln gbfs;zk

--- a/sass/site/variables.scss
+++ b/sass/site/variables.scss
@@ -17,4 +17,7 @@ $black: #000;
 
 //Time
 
-$transition-time: .2s
+$transition-time: .2s;
+
+  // Maket
+$maket-visible: 1; // 0 - Invisible | 1 - Visible
