--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,32 @@ a {
     background-color: #68b738;
     color: #fff; }
 
+.maket {
+  position: relative; }
+  .maket__pos {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    opacity: .3;
+    z-index: 11;
+    pointer-events: none;
+    display: none; }
+    .maket__pos--mobile {
+      display: block; }
+      @media (min-width: 768px) {
+        .maket__pos--mobile {
+          display: none; } }
+    @media (min-width: 768px) {
+      .maket__pos--tablet {
+        display: block; } }
+    @media (min-width: 1200px) {
+      .maket__pos--tablet {
+        display: none; } }
+    @media (min-width: 1200px) {
+      .maket__pos--desktop {
+        display: block; } }
+
 h1 {
   font: normal 36px/36px "Oswald", sans-serif; }
   @media (min-width: 768px) {
@@ -160,11 +186,21 @@ h1 {
           -ms-flex-align: center;
               align-items: center; } }
   .nav__item {
+    position: relative;
     display: block;
     text-transform: uppercase;
-    padding: 25px 0;
+    padding: 17px 0;
     color: #000;
     -webkit-tap-highlight-color: rgba(0, 0, 10, 0); }
+    @media (max-width: 768px) {
+      .nav__item:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: -20px;
+        bottom: 0;
+        left: -20px;
+        border-top: 2px solid royalblue; } }
     @media (min-width: 768px) {
       .nav__item {
         padding: 0 20px; } }
@@ -176,12 +212,12 @@ h1 {
       padding-left: 90px; } }
   @media (min-width: 1200px) {
     .main-sect__block:after {
-      content: '';
+      content: ' ';
       position: absolute;
-      right: 0;
       top: 0;
-      left: 50%;
+      right: 0;
       bottom: 0;
+      left: 50%;
       z-index: 0;
       background: #63a73a url("/img/index-background-desktop.png") no-repeat; } }
 
