--- a/sass/site/nav.scss
+++ b/sass/site/nav.scss
@@ -10,11 +10,23 @@
   }
 
   &__item {
+    position: relative;
     display: block;
     text-transform: uppercase;
-    padding: 25px 0;
+    padding: 17px 0;
     color: $black;
     -webkit-tap-highlight-color: rgba(0, 0, 10, 0);
+    @media (max-width: $tablet) {
+      &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: -20px;
+        bottom: 0;
+        left: -20px;
+        border-top: 2px solid royalblue;
+      }
+    }
     @media (min-width: $tablet) {
       padding: 0 20px;
     }
