--- a/sass/site/choose.scss
+++ b/sass/site/choose.scss
@@ -3,23 +3,38 @@
     @media (min-width: $desktop) {
       display: flex;
     }
+    &--indent {
+      @media (min-width: $tablet) {
+        margin-bottom: 40px;
+      }
+      @media (min-width: $desktop) {
+        padding-bottom: 20px;
+      }
+    }
   }
   &__element {
     background-color: $secondary;
-    padding: 20px;
-    @media (min-width: $mobile) {
-      padding: 80px 60px;
-    }
+    padding: 25px 20px 20px 20px;
     @media (min-width: $tablet) {
+      padding: 65px 55px;
       display: flex;
       justify-content: space-between;
     }
     @media (min-width: $desktop) {
+      padding: 45px 55px;
       display: block;
       width: 50%;
     }
     &--indent {
       margin-bottom: 20px;
+      &:last-child {
+        @media (min-width: $tablet) {
+          margin-bottom: 0;
+        }
+        @media (min-width: $desktop) {
+          margin-bottom: 20px;
+        }
+      }
       &:not(:first-child) {
         @media (min-width: $desktop) {
           margin-left: 40px;
@@ -33,7 +48,7 @@
     }
   }
   &__content {
-    @media (min-width: $mobile) {
+    @media (min-width: $tablet) {
       width: 60%;
     }
     @media (min-width: $desktop) {
@@ -45,13 +60,17 @@
     align-items: center;
     &--indent {
       padding-bottom: 20px;
+      @media (min-width: $desktop) {
+        padding-bottom: 45px;
+      }
     }
   }
   &__icon {
     border-radius: 50%;
     background-color: $primary;
     flex-shrink: 0;
-    &--small {
+
+    &--mobile {
       width: 50px;
       height: 50px;
       .svg {
@@ -59,15 +78,17 @@
         height: 50px;
       }
     }
-    &--invis-tab {
-      @media (min-width: $mobile) {
+
+    &--invis-on-tab {
+      @media (min-width: $tablet) {
         display: none;
       }
       @media (min-width: $desktop) {
         display: block;
       }
     }
-    &--big {
+
+    &--tablet {
       width: 200px;
       height: 200px;
       .svg {
@@ -75,13 +96,24 @@
         height: 200px;
       }
     }
-    &--vis-in-tab {
+
+    &--vis-on-tab {
       display: none;
-      @media (min-width: $mobile) {
+      @media (min-width: $tablet) {
         display: block;
       }
       @media (min-width: $desktop) {
         display: none;
+      }
+    }
+    &--desktop {
+      @media (min-width: $desktop) {
+        width: 100px;
+        height: 100px;
+        .svg {
+          width: 100px;
+          height: 100px;
+        }
       }
     }
   }
@@ -89,15 +121,27 @@
     text-transform: uppercase;
     &--indent {
       padding-left: 20px;
+      @media (min-width: $tablet) {
+        padding-left: 0;
+      }
+      @media (min-width: $desktop) {
+        padding-left: 60px;
+        }
     }
   }
   &__text {
     &--indent {
       padding-bottom: 20px;
+      @media (min-width: $tablet) {
+        padding-bottom: 60px;
+      }
+      @media (min-width: $desktop) {
+        padding-bottom: 22px;
+      }
     }
     &--border {
       border-bottom: 1px solid $diz;
-      @media (min-width: $mobile) {
+      @media (min-width: $tablet) {
         border-bottom: none;
       }
     }
@@ -107,11 +151,19 @@
     align-items: center;
     &--indent {
       margin-top: 20px;
+      @media (min-width: $tablet) {
+        margin-top: 0;
+      }
     }
   }
   &__link {
     text-transform: uppercase;
     color: $black;
+    @include font(normal, 16px, 1);
+    @media (min-width: $tablet) {
+      @include font(normal, 20px, 1);
+    }
+
   }
   &__pointer {
     color: $black;
