--- a/sass/site/how.scss
+++ b/sass/site/how.scss
@@ -1,12 +1,23 @@
 .how {
 
+  &__block {
+    &--indent {
+      padding-bottom: 20px;
+      @media(min-width: $tablet) {
+        padding-bottom: 0;
+      }
+    }
+  }
   &__title {
-    &--ident {
+    &--indent {
       padding-bottom: 40px;
+      @media(min-width: $tablet) {
+        padding-bottom: 70px;
+      }
     }
   }
   &__items {
-    @media(min-width: $mobile) {
+    @media(min-width: $tablet) {
       display: flex;
       flex-wrap: wrap-reverse;
     }
@@ -15,16 +26,16 @@
     display: flex;
     align-items: center;
     position: relative;
-    @media(min-width: $mobile) {
+    @media(min-width: $tablet) {
       display: block;
       width: 50%;
     }
     @media(min-width: $desktop) {
       width: 25%;
     }
-    &--ident {
+    &--indent {
       margin-bottom: 20px;
-      @media(min-width: $mobile) {
+      @media(min-width: $tablet) {
         padding-right: 125px;
       }
       @media(min-width: $desktop) {
@@ -34,11 +45,17 @@
   }
   &__trafaret {
     @include square-size(60px);
+    @media(min-width: $tablet) {
+      @include square-size(80px);
+    }
+    @media(min-width: $desktop) {
+      padding-right: 50px;
+    }
     background-color: $primary;
     flex-shrink: 0;
     position: relative;
-    &--ident {
-      @media(min-width: $mobile) {
+    &--indent {
+      @media(min-width: $tablet) {
         margin-bottom: 30px;
       }
     }
@@ -60,9 +77,9 @@
   &__text {
     position: relative;
     z-index: 1;
-    &--ident {
+    &--indent {
       padding-left: 15px;
-      @media(min-width: $mobile) {
+      @media(min-width: $tablet) {
         padding-left: 0;
         padding-bottom: 45px;
       }
@@ -70,7 +87,7 @@
   }
   &__count {
     display: none;
-    @media(min-width: $mobile) {
+    @media(min-width: $tablet) {
       display: block;
       position: absolute;
       top: 0;
