--- a/sass/site/__types.scss
+++ b/sass/site/__types.scss
@@ -1,20 +1,20 @@
 h1 {
   @include font(normal, 36px, 36px);
-  @media (min-width: $mobile) {
+  @media (min-width: $tablet) {
     @include font(normal, 60px, 60px);
   }
 }
 
 .h2, h2 {
   @include font(normal, 36px, 36px);
-  @media (min-width: $mobile) {
+  @media (min-width: $tablet) {
     @include font(normal, 60px, 60px);
   }
 }
 
 .h3, h3 {
   @include font(normal, 24px, 1);
-  @media (min-width: $mobile) {
+  @media (min-width: $tablet) {
     @include font(normal, 36px, 1);
   }
 }
@@ -31,7 +31,7 @@ h1 {
 
 .h5, h5 {
   @include font(normal, 14px, 21px);
-  @media (min-width: $mobile) {
+  @media (min-width: $tablet ) {
     @include font(normal, 20px, 30px);
   }
 }
