--- a/sass/site/btn.scss
+++ b/sass/site/btn.scss
@@ -3,7 +3,7 @@
   @extend .h5;
   cursor: pointer;
   padding: 10px 0;
-  @media (min-width: $mobile) {
+  @media (min-width: $tablet) {
     width: 250px;
     padding: 10px 30px;
     z-index: 1;
