--- a/sass/site/example.scss
+++ b/sass/site/example.scss
@@ -11,20 +11,22 @@
     }
   }
   &__title {
-    &--ident {
+    &--indent {
       padding-bottom: 35px;
-      @media (min-width: $mobile) {
-        padding-bottom: 55px;
+      @media (min-width: $tablet) {
+        padding-top: 125px; ////////////////////////////////////////////////////////// BAD
+        padding-bottom: 67px;
       }
       @media (min-width: $desktop) {
-        padding-bottom: 140px;
+        padding-top: 40px;
+        padding-bottom: 150px;
       }
     }
   }
   &__text {
-    &--ident {
+    &--indent {
       padding-bottom: 25px;
-      @media (min-width: $mobile) {
+      @media (min-width: $tablet) {
         padding-bottom: 55px;
       }
       @media (min-width: $desktop) {
@@ -32,33 +34,123 @@
       }
     }
   }
+  &__collapse {
+    @media (min-width: $tablet) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 90px;
+    }
+    @media (min-width: $desktop) {
+      display: block;
+    }
+  }
+  &__tabs {
+    display: flex;
+    justify-content: space-between;
+    @media (min-width: $tablet) {
+      justify-content: normal;
+    }
+    &--indent {
+      margin-bottom: 40px;
+      @media (min-width: $tablet) {
+        margin-bottom: 0;
+      }
+      @media (min-width: $desktop) {
+        margin-bottom: 60px;
+      }
+    }
+  }
+  &__tab {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 125px;
+    height: 56px;
+    border: 1px solid rgba($diz, .5);
+    border-radius: 3px;
+    text-transform: uppercase;
+    position: relative;
+    @media (min-width: $tablet) {
+      width: 165px;
+      height: 70px;
+      &:first-child {
+        margin-right: 40px;
+      }
+    }
+  }
+  &__dop-text {
+    text-align: center;
+    position: absolute;
+    padding: 0 15px;
+    top: 100%;
+    transform: translateY(-50%);
+    text-transform: none;
+    background-color: $secondary;
+    white-space: nowrap;
+    @include font(normal, 12px, 1);
+    @media (min-width: $tablet) {
+      background-color: $white;
+      @include font(normal, 14px, 1);
+      padding: 0 10px;
+    }
+  }
   &__payed {
     text-transform: uppercase;
-    &--ident {
+    text-align: center;
+    @media (min-width: $tablet) {
+      text-align: end;
+    }
+    @media (min-width: $tablet) {
+      text-align: start;
+    }
+    &--indent {
       padding-bottom: 40px;
+      @media (min-width: $tablet) {
+        padding-bottom: 0;
+      }
     }
   }
   &__pic {
     pointer-events: none;
     position: relative;
+    &--indent {
+      padding-bottom: 30px;
+      @media (min-width: $tablet) {
+        padding-bottom: 50px;
+      }
+      @media (min-width: $desktop) {
+        padding-right: 20px;
+      }
+    }
   }
-  &__slider {
-
-    position: absolute;
-    right: 30%;
-    left: 30%;
-    height: 6px;
-    background-color: $dop-color;
-    border-radius: 3px;
+  &__dop-block {
+    &--indent {
+      margin-bottom: 20px;
+    }
   }
-  &--ident {
+  &--indent {
+    padding-top: 25px;
     padding-bottom: 20px;
-    @media (min-width: $mobile) {
+    @media (min-width: $tablet) {
       padding-bottom: 50px;
       padding-left: 90px;
     }
     @media (min-width: $desktop) {
       padding-bottom: 30px;
+    }
+  }
+  &--push {
+    margin-right: -20px;
+    margin-left: -20px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  &--bg-grey {
+    background-color: $secondary;
+    @media (min-width: $tablet) {
+      background: rgba($secondary, .3);
     }
   }
 }
