--- a/sass/site/footer.scss
+++ b/sass/site/footer.scss
@@ -10,7 +10,7 @@
     }
     @media (min-width: $desktop) {
     }
-    &--ident {
+    &--indent {
       padding: 0 20px;
       @media (min-width: $mobile) {
         padding: 0 30px;
@@ -22,7 +22,8 @@
   }
   &__item {
     display: flex;
-    padding: 30px 0;
+    padding: 25px 0;
+    position: relative;
     &:first-child {
       padding-top: 0;
     }
@@ -30,10 +31,18 @@
       padding-bottom: 0;
     }
     &:not(:first-child):not(:last-child) {
-      border-top: 1px solid $diz;
-      border-bottom: 1px solid $diz;
+      &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        border-top: 1px solid $diz;
+        border-bottom: 1px solid $diz;
+      }
     }
-    @media (min-width: $mobile) {
+    @media (min-width: $tablet) {
       border-top: none !important;
       border-bottom: none !important;
       padding: 0;
