--- a/sass/site/header.scss
+++ b/sass/site/header.scss
@@ -1,25 +1,40 @@
 .header {
+  position: relative;
   &__warp {
     display: flex;
     flex-direction: column;
     align-items: center;
-    @media (min-width: $mobile) {
+    @media (min-width: $tablet) {
       flex-direction: row;
       justify-content: space-between;
     }
     @media (min-width: $desktop) {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: 2 ;
+    }
+    &--indent {
+      @media (min-width: $tablet) {
+        padding-top: 25px;
+      }
+      @media (min-width: $desktop) {
+        padding-top: 55px;
+      }
     }
   }
   &__main-sect {
     &--indent {
       padding-bottom: 20px;
-      @media (min-width: $mobile) {
+      @media (min-width: $tablet) {
         padding: 30px 0 0 80px;
         //padding-bottom: 50px;
         //padding-left: 90px;
       }
       @media (min-width: $desktop) {
-        padding-bottom: 30px;
+        padding: 0;
+        margin-bottom: 80px;
       }
     }
   }
