--- a/sass/site/nav.scss
+++ b/sass/site/nav.scss
@@ -1,21 +1,21 @@
 .nav {
   text-align: center;
-  @media (min-width: $mobile) {
+  @media (min-width: $tablet) {
     display: flex;
   }
   @media (min-width: $desktop) {
-    background-color: $primary;
+    //background-color: $primary;
   }
   &__item {
+    //border-top: 1px solid red;
     color: $black;
     text-decoration: none;
     text-transform: uppercase;
     white-space: nowrap;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    @extend .h5;
     display: block;
-    margin: 25px 0;
-    @media (min-width: $mobile) {
+    padding: 17px 0;
+    @media (min-width: $tablet) {
       margin: 0 18px;
       padding: 5px 0;
       transition: opacity $transition-time ease, border $transition-time ease;
@@ -42,7 +42,7 @@
       }
     }
     &:first-child {
-      margin-top: 0;
+      //margin-top: 0;
     }
   }
 }
